style: fix unexpected margin collapsing in list items

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,7 +25,7 @@
 
 @layer components {
   .section-container {
-    @apply mt-14;
+    @apply mt-10;
   }
   
   .section-title {
